--- a/index-de.html
+++ b/index-de.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Blocksize One - Coming Soon</title>
+		<title>Blocksize One - Demnächst</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,28 +48,28 @@
 
 		<!-- Language Switcher -->
 		<div class="language-switcher">
-			<a href="index.html" class="active">EN</a>
-			<a href="index-de.html">DE</a>
+			<a href="index.html">EN</a>
+			<a href="index-de.html" class="active">DE</a>
 		</div>
 
 		<!-- Header -->
 			<header id="header">
 				<h1>Blocksize One</h1>
-				<p><strong>Digital Innovation & Business Solutions</strong><br />
-				Marketing • Digital Products • Business Consulting<br />
+				<p><strong>Digitale Innovation & Geschäftslösungen</strong><br />
+				Marketing • Digitale Produkte • Unternehmensberatung<br />
 				<br />
-				We develop and market cutting-edge digital products and services.<br />
-				Expert consulting in digitalization, marketing, and business development.</p>
+				Wir entwickeln und vermarkten innovative digitale Produkte und Dienstleistungen.<br />
+				Expertenberatung in Digitalisierung, Marketing und Geschäftsentwicklung.</p>
 			</header>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://github.com/BlocksizeOne" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:webmaster@blocksize.one" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:webmaster@blocksize.one" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Blocksize One UG (haftungsbeschränkt)</li><li><a href="legal.html">Imprint • Legal Notice • Privacy</a></li>
+					<li>&copy; Blocksize One UG (haftungsbeschränkt)</li><li><a href="legal-de.html">Impressum • Rechtliche Hinweise • Datenschutz</a></li>
 				</ul>
 			</footer>
 
